# birdsong

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py
app/main/: __init__.py
app/recordings/: __init__.py  routes.py
app/templates/: base.html  nav.html
app/templates/recordings/: index.html
