[tool.poetry]
name = "birdsong"
version = "0.1.0"
description = ""
authors = ["Tom Camp <tom.camp@civicactions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
birdnetlib = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
